--- a/requirements/base.in
+++ b/requirements/base.in
@@ -3,6 +3,8 @@
 attrs==18.2.0
 click==7
 gitignoreio==0.1.5
+toolz==0.9.0
+tqmd==4.32.1
 
 -e git+https://github.com/altendky/pysunspec@3662dd0a7d6810652320284ac4256beee5b20f2d#egg=pysunspec
 
