build: activate python venv

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
 
       - name: Package executable
         run: |
+          venv/Scripts/activate
           venv/Scripts/pip install pyinstaller
           venv/Scripts/pyinstaller pyinstaller.spec
 
