--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.9
-long_description: file: README.rst
+long_description = file: README.rst
 long_description_content_type = text/x-rst
 
 [options]
