build: manage version with versioneer, update release procedure

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,3 +38,10 @@ development =
 [options.entry_points]
 console_scripts =
     epcsunspecdemo = epcsunspecdemo.cli:cli
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = src/epcsunspecdemo/_version.py
+versionfile_build = epcsunspecdemo/_version.py
+tag_prefix = v
