--- a/requirements/base.in
+++ b/requirements/base.in
@@ -6,5 +6,4 @@ gitignoreio==0.1.5
 toolz==0.9.0
 tqdm==4.32.1
 
--e git+https://github.com/altendky/pysunspec@3662dd0a7d6810652320284ac4256beee5b20f2d#egg=pysunspec
-
+pysunspec==2.1.0
