--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ install_requires =
     attrs == 18.2.0
     click == 7.0
     gitignoreio == 0.1.5
-    pysunspec == 2.0.0
+    pysunspec ~= 2.1.0
     toolz == 0.9.0
     tqdm == 4.32.1
 
