Help versioneer and pyinstaller get along

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,8 @@ jobs:
 
       - name: Package executable
         run: |
+          # help versioneer and pyinstaller get along
+          python -m pip install .
           venv/Scripts/pyinstaller pyinstaller.spec
 
       - name: Archive executable
