--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,24 +51,24 @@ jobs:
           venv/Scripts/pip install .
           venv/Scripts/pyinstaller pyinstaller.spec
 
-      - name: Report executable version
+      - name: Check and report executable version
         shell: python
         run: |
           # this belongs in a test once we get a test suite started
 
           import subprocess
-          
+
           completed_process = subprocess.run(
               ["dist/epcsunspecdemo", "--version"],
               capture_output=True,
               check=True,
           )
-          
+
           sys.stdout.write(completed_process.stdout)
-          
-          unknown = b"unknown"
+
+          unknown == b"unknown"
           assert unknown not in completed_process.stdout, f"{unknown!r} found in above stdout"
-          assert b"" = completed_process.stderr, f"stderr not empty: {completed_process.stderr!r}"
+          assert b"" == completed_process.stderr, f"stderr not empty: {completed_process.stderr!r}"
 
       - name: Archive executable
         uses: actions/upload-artifact@v2
