--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,7 @@ name: CI
 on:
   push:
     branches:
-      # TODO: cover hotfix, release, master, etc?
-      - develop
+      - main
     tags:
       - v*
   pull_request:
