--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           python -m ensurepip
           python -m pip install --upgrade pip
-          python -m pip install poetry==${{ matrix.poetry-version }}
+          python -m pip install poetry
 
       - name: View poetry --help
         run: poetry --help
