--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,7 @@ jobs:
         run: |
           # python boots.py ensure --group build
           poetry install
+          poetry build
 
 #      - name: Package executable
 #        run: |
