--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Alex Anker <alex.anker@epcpower.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = ">=3.7,<3.11"
 attrs = "18.2.0"
 click = "7"
 gitignoreio = "0.1.5"
@@ -14,6 +14,7 @@ tqdm = "4.32.1"
 pysunspec = "2.1.0"
 setuptools = "53.0.0"
 toml = "^0.10.2"
+pyinstaller = "^4.7"
 
 [tool.poetry.dev-dependencies]
 
