--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,7 @@ jobs:
           poetry run pyinstaller pyinstaller.spec
           pwd
           ls dist/
+          dist/epcsunspecdemo --version 
 
 #      - name: Package executable
 #        run: |
