--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ tqdm = "4.32.1"
 pysunspec = "2.1.0"
 setuptools = "53.0.0"
 toml = "^0.10.2"
-pyinstaller = "^4.7"
+pyinstaller = "4.2"
 
 [tool.poetry.dev-dependencies]
 
