use poetry-dynamic-versioning

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,12 @@
 [tool.poetry]
 name = "epcsunspecdemo"
-version = "0.1.1"
+version = "0.1.0.post46.dev0+2a57176"
 description = ""
 authors = ["Alex Anker <alex.anker@epcpower.com>"]
+
+[tool.poetry-dynamic-versioning]
+enable = true
+
 
 [tool.poetry.dependencies]
 python = "3.7.9"
