--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,9 @@ jobs:
 
       - name: poetry install
         run: |
+          (Get-Command python3).Path
+          which python3
+          poetry env use -vvv C:\hostedtoolcache\windows\Python\3.9.9\bin\python
           poetry install
 
       - name: run pyinstaller
