--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,7 @@ jobs:
       - name: poetry install
         run: |
           which python3
+          ls poetry env use -vvv C:\\hostedtoolcache\\windows\\Python\\3.9.9\\
           poetry env use -vvv C:\\hostedtoolcache\\windows\\Python\\3.9.9\\bin\\python
           poetry install
 
