--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: poetry install
         run: |
-          poetry ev info
+          poetry env info
           which python3
           ls poetry env use -vvv C:\\hostedtoolcache\\windows\\Python\\3.9.9\\
           poetry env use -vvv C:\\hostedtoolcache\\windows\\Python\\3.9.9\\bin\\python
