--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,9 +49,9 @@ jobs:
       - name: poetry install
         run: |
           poetry env info
-          which python3
-          ls poetry env use -vvv C:\\hostedtoolcache\\windows\\Python\\3.9.9\\
-          poetry env use -vvv C:\\hostedtoolcache\\windows\\Python\\3.9.9\\bin\\python
+          #which python3
+          #ls poetry env use -vvv C:\\hostedtoolcache\\windows\\Python\\3.9.9\\
+          #poetry env use -vvv C:\\hostedtoolcache\\windows\\Python\\3.9.9\\bin\\python
           poetry install
 
       - name: run pyinstaller
