--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "epcsunspecdemo"
-version = "0.1.0.post46.dev0+2a57176"
+version = "0.0.0"
 description = ""
 authors = ["Alex Anker <alex.anker@epcpower.com>"]
 
@@ -26,5 +26,5 @@ pyinstaller = "4.2"
 epcsunspecdemo = 'epcsunspecdemo.cli:cli'
 
 [build-system]
-requires = ["setuptools", "poetry-core>=1.0.0"]
+requires = ["setuptools", "poetry-core>=1.0.0", "poetry-dynamic-versioning"]
 build-backend = "poetry.core.masonry.api"
