--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,7 @@ jobs:
       - name: run pyinstaller
         run: |
           poetry run pyinstaller pyinstaller.spec
+          .\dist\epcsunspecdemo.exe --version
 
       - name: Check and report executable version
         shell: python
