--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,7 @@ jobs:
 
       - name: run pyinstaller
         run: |
+          poetry run poetry-dynamic-versioning.exe
           poetry run pyinstaller pyinstaller.spec
           .\\dist\\epcsunspecdemo.exe --version
 
