respond to comments in pr

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,11 +48,11 @@ jobs:
 
           poetry install
 
-      - name: run pyinstaller
+      - name: Package executable
         run: |
+          #set the versioning in __init__.py
           poetry run poetry-dynamic-versioning.exe
           poetry run pyinstaller pyinstaller.spec
-          .\\dist\\epcsunspecdemo.exe --version
 
       - name: Check and report executable version
         shell: python
