--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "epcsunspecdemo"
 version = "0.0.0"
 description = ""
 authors = ["Alex Anker <alex.anker@epcpower.com>"]
+license = "MIT"
 
 [tool.poetry-dynamic-versioning]
 enable = true
