update toml with license

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,14 @@
 [tool.poetry]
 name = "epcsunspecdemo"
-version = "0.0.0"
+version = "0.1.1"
 description = ""
 authors = ["Alex Anker <alex.anker@epcpower.com>"]
+license = "MIT"
 
 [tool.poetry-dynamic-versioning]
 enable = true
 vcs = "git"
+format = "{base}"
 
 [tool.poetry-dynamic-versioning.substitution]
 files = ["src/epcsunspecdemo/__init__.py"]
@@ -23,6 +25,7 @@ toml = "^0.10.2"
 importlib = "^1.0.4"
 importlib-metadata = "^4.10.1"
 typing-extensions = "^4.0.1"
+
 [tool.poetry.dev-dependencies]
 gitignoreio = "0.1.5"
 pyinstaller = "4.2"
