--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
           poetry run poetry-dynamic-versioning.exe
           poetry run pyinstaller pyinstaller.spec
           poetry build
-          #poetry publish
+          poetry publish -u ${{ secrets.TWINE_USERNAME }} -p ${{ secrets.TWINE_PASSWORD }}
 
       - name: Check and report executable version
         shell: python
