--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ format = "{base}"
 files = ["src/sunspecdemo/__init__.py"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.7,<4.0"
 attrs = "18.2.0"
 click = "7"
 toolz = "0.9.0"
