--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ files = ["src/sunspecdemo/__init__.py"]
 
 [tool.poetry.dependencies]
 python = ">=3.7,<4.0"
-attrs = "18.2.0"
+attrs = ">=19.3.0"
 click = "7.1.2"
 toolz = "0.9.0"
 tqdm = "4.32.1"
