--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,9 @@ style = "pep440"
 files = ["src/sunspecdemo/__init__.py"]
 
 [tool.poetry.dependencies]
-python = ">=3.7,<4.0"
+python = "^3.7"
 attrs = ">=19.3.0"
-click = "7.1.2"
+click = "^7.0"
 toolz = "0.9.0"
 tqdm = "4.32.1"
 pysunspec = "2.1.1"
