--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,5 +35,5 @@ poetry-dynamic-versioning = "^0.13.1"
 sunspecdemo = 'sunspecdemo.cli:cli'
 
 [build-system]
-requires = ["setuptools", "poetry-core>=1.0.0", "poetry-dynamic-versioning"]
+requires = ["setuptools", "poetry-core>=1.0.0", "poetry-dynamic-versioning",]
 build-backend = "poetry.core.masonry.api"
