--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ click = "^7.0"
 toolz = "0.9.0"
 tqdm = "4.32.1"
 pysunspec = "2.1.1"
-setuptools = ">=58.3.0"
+setuptools = "53.0.0"
 toml = "^0.10.2"
 importlib = "^1.0.4"
 importlib-metadata = "^4.10.1"
