--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,12 +14,13 @@ style = "pep440"
 files = ["src/sunspecdemo/__init__.py"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "3.7.9"
 attrs = ">=19.3.0"
 click = "^7.0"
 toolz = "0.9.0"
 tqdm = "4.32.1"
-pysunspec = "2.1.1"
+#must change this back to a verison before merging
+pysunspec = {git = "https://github.com/altendky/pysunspec", rev = "edb9f3f5eead2e50f20c0b752f10695fa0e8be23"}
 setuptools = ">=53.0.0"
 toml = "^0.10.2"
 importlib = "^1.0.4"
