--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ click = "^7.0"
 toolz = "0.9.0"
 tqdm = "4.32.1"
 #must change this back to a verison before merging
-pysunspec = {git = "https://github.com/altendky/pysunspec", rev = "edb9f3f5eead2e50f20c0b752f10695fa0e8be23"}
+#pysunspec = {git = "https://github.com/altendky/pysunspec", rev = "edb9f3f5eead2e50f20c0b752f10695fa0e8be23"}
+pysunspec = "2.0.0"
 setuptools = ">=53.0.0"
 toml = "^0.10.2"
 importlib = "^1.0.4"
