--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       fail-fast: false
       matrix:
         python:
-          - name: CPython 3.9.7
+          - name: Python 3.9.7
             version: 3.9.7
             action: 3.9.7
         arch:
