--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ style = "pep440"
 files = ["src/sunspecdemo/__init__.py"]
 
 [tool.poetry.dependencies]
-python = "3.9.7"
+python = ">=3.7.9, <4.0"
 attrs = ">=19.3.0"
 click = "^7.0"
 toolz = "0.9.0"
