add poetry configs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,8 @@ jobs:
           python3 -m ensurepip
           python3 -m pip install --upgrade pip
           python3 -m pip install poetry
-
+          poetry config virtualenvs.in-project true
+          poetry config virtualenvs.path .
           poetry install
 
       - name: Package executable
