--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ style = "pep440"
 files = ["src/sunspecdemo/__init__.py"]
 
 [tool.poetry.dependencies]
-python = "^3.7.9"
+python = ">=3.7,<3.11"
 attrs = ">=19.3.0"
 click = "^7.0"
 toolz = "0.9.0"
@@ -32,8 +32,9 @@ pyserial = "3.4"
 
 [tool.poetry.dev-dependencies]
 gitignoreio = "0.1.5"
-pyinstaller = "4.2"
 poetry-dynamic-versioning = "^0.13.1"
+pyinstaller = "4.4"
+
 
 [tool.poetry.scripts]
 sunspecdemo = 'sunspecdemo.cli:cli'
