--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,9 +57,9 @@ jobs:
           poetry config virtualenvs.path .
 
           #Setup AWS Connection
-          poetry config repositories.epc-power https://epc-power-us-${{ secrets.AWS_ACCOUNT_ID }}.d.codeartifact.us-east-2.amazonaws.com/pypi/epc-power/
-          export CODEARTIFACT_AUTH_TOKEN=`aws codeartifact get-authorization-token --domain epc-power-us --domain-owner ${{ secrets.AWS_ACCOUNT_ID }} --query authorizationToken --output text`
-          poetry config http-basic.epc-power aws $CODEARTIFACT_AUTH_TOKEN
+          #poetry config repositories.epc-power https://epc-power-us-${{ secrets.AWS_ACCOUNT_ID }}.d.codeartifact.us-east-2.amazonaws.com/pypi/epc-power/
+          #export CODEARTIFACT_AUTH_TOKEN=`aws codeartifact get-authorization-token --domain epc-power-us --domain-owner ${{ secrets.AWS_ACCOUNT_ID }} --query authorizationToken --output text`
+          #poetry config http-basic.epc-power aws $CODEARTIFACT_AUTH_TOKEN
 
           poetry config --list
 
@@ -97,7 +97,13 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         run: |
           #poetry publish -u __token__ -p ${{ secrets.TWINE_TOKEN }}
-          poetry publish --repository epc-power
+          #poetry publish --repository epc-power
+          
+          #Set Up AWS Connection
+          aws codeartifact login --tool twine --repository epc-power --domain epc-power-us --domain-owner ${{ secrets.AWS_ACCOUNT_ID }}
+          #Twine Upload
+          twine upload --repository codeartifact dist/*
+
 
       - name: Archive executable
         uses: actions/upload-artifact@v2
