--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,8 @@ tqdm = "4.32.1"
 pysunspec = "2.1.0"
 setuptools = ">=53.0.0"
 toml = "^0.10.2"
-importlib = "^1.0.4"
-importlib-metadata = "^4.10.1"
+#importlib = "^1.0.4"
+#importlib-metadata = "^4.10.1"
 typing-extensions = "^4.0.1"
 pyserial = "3.4"
 
